@@ -1,5 +1,10 @@
 2002-06-19  Nathanael Nerode  <neroden@twcny.rr.com>
 
+	* configure.in: Remove references to librx.
+	* Makefile.in: Remove references to librx.
+
+2002-06-19  Nathanael Nerode  <neroden@twcny.rr.com>
+
 	* configure.in: Eliminate ${gasdir} variable.
 
 2002-06-18  Dave Brolley  <brolley@redhat.com>
